--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "@iac-factory/api",
+    "name": "@iac-factory/node-authentication-api",
     "version": "0.0.0",
-    "private": true,
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
     "devDependencies": {
@@ -23,9 +22,8 @@
         "dotenv-expand": "^8.0.3"
     },
     "scripts": {
-        "dependencies": "npm install --global typescript@latest",
-        "source": "npm install --install-links --omit dev --omit optional --omit peer .",
-        "production": "npm run source && node .",
+        "installation": "npm install --install-links --omit dev --omit optional --omit peer .",
+        "production": "npm run installation && node .",
         "build": "tsc --build $(dirname $(npm root))",
         "test": "npm run build && node --experimental-vm-modules $(command -v jest) --config jest.config.js --injectGlobals --detectOpenHandles",
         "start": "npm run build && ts-node $(dirname $(npm root))"
