--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "license": "BSD-3-Clause",
     "devDependencies": {
         "@iac-factory/unit-testing": "./packages/unit-testing",
+        "@types/node": "^18.8.4",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.4",
-        "@types/node": "^18.8.4"
+        "typescript": "^4.8.4"
     },
     "dependencies": {
         "@iac-factory/api-core": "./packages/core",
@@ -16,8 +16,8 @@
         "@iac-factory/api-routing": "./packages/routing",
         "@iac-factory/api-schema": "./packages/schema",
         "@iac-factory/api-services": "./packages/service",
-        "@iac-factory/api-utilities": "./packages/utilities",
         "@iac-factory/api-tls-certificates": "./packages/tls",
+        "@iac-factory/api-utilities": "./packages/utilities",
         "dotenv": "^16.0.3",
         "dotenv-expand": "^9.0.0"
     },
