--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,7 +13,9 @@
     "dependencies": {
         "@iac-factory/api-core": "*",
         "@iac-factory/api-schema": "*",
-        "mongodb": "^4.8.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.3.10",
+        "mongodb": "^4.11.0",
         "pg": "^8.7.3"
     },
     "devDependencies": {
