--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@iac-factory/api-utilities": "*",
+        "mongodb": "^4.11.0",
         "bcrypt": "^5.0.1",
         "bcryptjs": "^2.4.3",
         "express": "^5.0.0-beta.1",
