--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iac-factory/api-middleware",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": true,
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
@@ -15,11 +15,10 @@
         "express": "^5.0.0-beta.1"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.2",
         "@types/compression": "^1.7.2",
-        "@types/node": "^18.0.3",
         "@types/express": "^4.17.14",
         "@types/express-serve-static-core": "^4.17.31",
-        "@types/body-parser": "^1.19.2"
-
+        "@types/node": "^18.0.3"
     }
 }
