--- a/packages/tls-certificates/package.json
+++ b/packages/tls-certificates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iac-factory/aws-tls-certificates",
-    "version": "0.4.17",
+    "version": "0.4.18",
     "description": "...",
     "main": "index.js",
     "publishConfig": {
@@ -14,7 +14,7 @@
         "prepublish": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authentication-utilities": "*"
+        "@iac-factory/api-authentication-utilities": "^0.0.2"
     },
     "gitHead": "22670b6108216502df9873de2847f41b41cdcbd5"
 }
