--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iac-factory/api-authentication-utilities",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": true,
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
@@ -11,8 +11,8 @@
         "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
     },
     "dependencies": {
-        "@iac-factory/api-core": "*",
-        "@iac-factory/aws-tls-certificates": "*",
+        "@iac-factory/api-core": "^0.0.2",
+        "@iac-factory/aws-tls-certificates": "^0.4.18",
         "ansi-colors": "^4.1.3"
     }
 }
