--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "@iac-factory/api-schema",
-    "version": "0.0.2",
-    "private": true,
+    "name": "@iac-factory/api-authentication-schema",
+    "version": "0.2.2",
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/schema"
+    },
     "main": "index.js",
     "scripts": {
         "start": "cd $(git rev-parse --show-toplevel) && npm run start",
