--- a/packages/ci/package.json
+++ b/packages/ci/package.json
@@ -1,6 +1,13 @@
 {
-    "name": "@iac-factory/ci",
-    "version": "0.0.57",
+    "name": "@iac-factory/api-authentication-ci",
+    "version": "0.8.1",
+    "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
+    "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/ci"
+    },
     "main": "index.js",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com"
@@ -13,7 +20,7 @@
         "preinstall": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-utilities": "*"
+        "@iac-factory/api-authentication-utilities": "*"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
