--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,20 +1,24 @@
 {
-    "name": "@iac-factory/api-core",
+    "name": "@iac-factory/api-authentication-core",
     "version": "0.0.2",
-    "private": true,
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/core"
+    },
     "main": "index.js",
     "scripts": {
         "start": "cd $(git rev-parse --show-toplevel) && npm run start",
         "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
     },
     "dependencies": {
-        "@iac-factory/api-middleware": "^0.0.2",
-        "@iac-factory/api-routing": "^0.0.2",
-        "@iac-factory/api-services": "^0.0.2",
-        "@iac-factory/api-tls-certificates": "*",
-        "@iac-factory/api-utilities": "*"
+        "@iac-factory/api-authentication-middleware": "^0.0.2",
+        "@iac-factory/api-authentication-routing": "^0.0.2",
+        "@iac-factory/api-authentication-services": "^0.0.2",
+        "@iac-factory/api-authentication-tls": "*",
+        "@iac-factory/api-authentication-authentication-utilities": "*"
     }
 }
