--- a/packages/routing/package.json
+++ b/packages/routing/package.json
@@ -1,18 +1,22 @@
 {
-    "name": "@iac-factory/api-routing",
-    "version": "0.0.2",
-    "private": true,
+    "name": "@iac-factory/api-authentication-routing",
+    "version": "0.7.20",
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/routing"
+    },
     "main": "index.js",
     "scripts": {
         "start": "cd $(git rev-parse --show-toplevel) && npm run start",
         "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
     },
     "dependencies": {
-        "@iac-factory/api-core": "^0.0.2",
-        "@iac-factory/api-services": "^0.0.2"
+        "@iac-factory/api-autentication-core": "^0.0.2",
+        "@iac-factory/api-autentication-services": "^0.0.2"
     },
     "devDependencies": {
         "@iac-factory/eslint-settings": "1.7.36"
