--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,17 +1,21 @@
 {
-    "name": "@iac-factory/api-services",
-    "version": "0.0.2",
-    "private": true,
+    "name": "@iac-factory/api-authentication-services",
+    "version": "0.11.7",
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/service"
+    },
     "main": "index.js",
     "scripts": {
         "start": "cd $(git rev-parse --show-toplevel) && npm run start",
         "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
     },
     "dependencies": {
-        "@iac-factory/api-utilities": "*",
+        "@iac-factory/api-authentication-utilities": "*",
         "bcrypt": "^5.0.1",
         "bcryptjs": "^2.4.3",
         "express": "^5.0.0-beta.1",
