--- a/packages/tls/package.json
+++ b/packages/tls/package.json
@@ -1,8 +1,15 @@
 {
-    "name": "@iac-factory/aws-tls-certificates",
+    "name": "@iac-factory/api-authentication-tls",
     "version": "0.4.18",
     "description": "...",
     "main": "index.js",
+    "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
+    "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/tls"
+    },
     "publishConfig": {
         "registry": "https://npm.pkg.github.com"
     },
