--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,18 +1,21 @@
 {
     "name": "@iac-factory/api-authentication-utilities",
     "version": "0.0.2",
-    "private": true,
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:iac-factory/node-authentication-api.git",
+        "directory": "packages/utilities"
+    },
     "main": "index.js",
     "scripts": {
         "start": "cd $(git rev-parse --show-toplevel) && npm run start",
         "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
     },
     "dependencies": {
-        "@iac-factory/api-core": "^0.0.2",
-        "@iac-factory/aws-tls-certificates": "^0.4.18",
+        "@iac-factory/api-authetnication-core": "^0.0.2",
         "ansi-colors": "^4.1.3"
     }
 }
