CI(Release): Packaging, Tests, Naming [90m<footer>[39m

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     ],
     "useNx": false,
     "version": "independent",
-    "useWorkspaces": true,
+    "useWorkspaces": false,
     "workspaces": [
         "packages/**"
     ]
