--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -11,8 +11,9 @@
     },
     "main": "index.js",
     "scripts": {
-        "start": "cd $(git rev-parse --show-toplevel) && npm run start",
-        "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
+        "build": "tsc --build $(pwd)",
+        "start": "npm run build && ts-node $(pwd)",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
         "body-parser": "^2.0.0-beta.1",
@@ -23,6 +24,6 @@
         "@types/compression": "^1.7.2",
         "@types/express": "^4.17.14",
         "@types/express-serve-static-core": "^4.17.31",
-        "@types/node": "^18.0.3"
+        "@types/node": "^18.11.3"
     }
 }
