--- a/packages/ci/package.json
+++ b/packages/ci/package.json
@@ -16,11 +16,10 @@
         "build": "tsc --build $(pwd)",
         "start": "npm run build && ts-node $(pwd)",
         "execute": "npm run build && npm install --global $(pwd) && $(basename $(pwd))",
-        "prepublish": "npm run build",
-        "preinstall": "npm run build"
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authentication-utilities": "*"
+        "@iac-factory/api-authentication-utilities": "file:../utilities"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
@@ -28,6 +27,5 @@
     },
     "bin": {
         "ci": "index.js"
-    },
-    "gitHead": "22670b6108216502df9873de2847f41b41cdcbd5"
+    }
 }
