--- a/packages/routing/package.json
+++ b/packages/routing/package.json
@@ -11,12 +11,14 @@
     },
     "main": "index.js",
     "scripts": {
-        "start": "cd $(git rev-parse --show-toplevel) && npm run start",
-        "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
+        "build": "tsc --build $(pwd)",
+        "start": "npm run build && ts-node $(pwd)",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-autentication-core": "^0.0.2",
-        "@iac-factory/api-autentication-services": "^0.0.2"
+        "@iac-factory/api-autentication-database": "file:../database",
+        "@iac-factory/api-autentication-schema": "file:../schema",
+        "@iac-factory/api-autentication-services": "file:../service"
     },
     "devDependencies": {
         "@iac-factory/eslint-settings": "1.7.36"
