--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -11,10 +11,11 @@
     },
     "main": "index.js",
     "scripts": {
-        "start": "cd $(git rev-parse --show-toplevel) && npm run start",
-        "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
+        "build": "tsc --build $(pwd)",
+        "start": "npm run build && ts-node $(pwd)",
+        "prepublishOnly": "npm run build"
     },
     "devDependencies": {
-        "@types/node": "^18.7.18"
+        "@types/node": "^18.11.3"
     }
 }
