--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -11,11 +11,13 @@
     },
     "main": "index.js",
     "scripts": {
-        "start": "cd $(git rev-parse --show-toplevel) && npm run start",
-        "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
+        "build": "tsc --build $(pwd)",
+        "start": "npm run build && ts-node $(pwd)",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authentication-utilities": "*",
+        "@iac-factory/api-authentication-utilities": "file:../utilities",
+        "@iac-factory/api-authentication-schema": "file:../schema",
         "bcrypt": "^5.0.1",
         "bcryptjs": "^2.4.3",
         "express": "^5.0.0-beta.1",
@@ -29,7 +31,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.9",
-        "@types/node": "^18.0.3",
+        "@types/node": "^18.11.3",
         "@types/uuid": "^8.3.4"
     }
 }
