--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iac-factory/api-authentication-utilities",
-    "version": "0.0.2",
+    "version": "0.9.17",
     "description": "...",
     "author": "Jacob B. Sanders <jacob.sanders@cloudhybrid.io> (https://github.com/iac-factory)",
     "license": "BSD-3-Clause",
@@ -11,11 +11,14 @@
     },
     "main": "index.js",
     "scripts": {
-        "start": "cd $(git rev-parse --show-toplevel) && npm run start",
-        "build": "tsc --build $(dirname $(npm root)/tsconfig.json"
+        "build": "tsc --build $(pwd)",
+        "start": "npm run build && ts-node $(pwd)",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authetnication-core": "^0.0.2",
         "ansi-colors": "^4.1.3"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.3"
     }
 }
