CI(Release): Unit-Testing Package, Version Bumps

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@iac-factory/api-authentication-services": "file:./packages/service",
         "@iac-factory/api-authentication-tls": "file:./packages/tls",
         "@iac-factory/api-authentication-utilities": "file:./packages/utilities",
+        "@iac-factory/api-authentication-unit-testing": "file:./packages/unit-testing",
         "dotenv": "^16.0.3",
         "dotenv-expand": "^9.0.0"
     },
