--- a/packages/ci/package.json
+++ b/packages/ci/package.json
@@ -19,7 +19,7 @@
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authentication-utilities": "file:../utilities"
+        "@iac-factory/api-authentication-utilities": "^0.9.18"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
@@ -27,5 +27,6 @@
     },
     "bin": {
         "ci": "index.js"
-    }
+    },
+    "gitHead": "78a7fb437c10b08df15c0aee91c0d551f925ef89"
 }
