--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -25,5 +25,6 @@
         "@types/express": "^4.17.14",
         "@types/express-serve-static-core": "^4.17.31",
         "@types/node": "^18.11.3"
-    }
+    },
+    "gitHead": "78a7fb437c10b08df15c0aee91c0d551f925ef89"
 }
