--- a/packages/tls/package.json
+++ b/packages/tls/package.json
@@ -19,6 +19,7 @@
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@iac-factory/api-authentication-utilities": "file:../utilities"
-    }
+        "@iac-factory/api-authentication-utilities": "^0.9.18"
+    },
+    "gitHead": "78a7fb437c10b08df15c0aee91c0d551f925ef89"
 }
