--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -20,5 +20,6 @@
     },
     "devDependencies": {
         "@types/node": "^18.11.3"
-    }
+    },
+    "gitHead": "78a7fb437c10b08df15c0aee91c0d551f925ef89"
 }
