--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .vscode
 .eclipse
 
+
 .venv
 __pycache__
 
@@ -13,7 +14,9 @@ __pycache__
 */.swc
 **/.swc/**
 
-.npmrc
+./**/.npmrc
+
+!.npmrc
 
 artifacts
 artifacts/*
