--- a/packages/routing/package.json
+++ b/packages/routing/package.json
@@ -21,6 +21,9 @@
         "@iac-factory/api-autentication-services": "file:../service"
     },
     "devDependencies": {
+        "express": "^5.0.0-beta.1",
+        "@types/express": "^4.17.14",
+        "@types/express-serve-static-core": "^4.17.31",
         "@iac-factory/eslint-settings": "1.7.36"
     },
     "eslintConfig": {
