--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@iac-factory/unit-testing": "file:./packages/unit-testing",
         "@types/node": "^18.11.3",
+        "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
     },
@@ -37,7 +38,9 @@
         "test": "npm run build && node --experimental-vm-modules $(command -v jest) --config jest.config.js --detectOpenHandles",
         "update": "npm run test -- --update-snapshot",
         "start": "npm run build && ts-node $(dirname $(npm root))",
+        "watch": "nodemon",
         "commit": "git add --all && commit",
-        "release": "npm run commit || true && ci"
+        "release": "npm run commit || true && ci",
+        "mongodb": "mongod --dbpath ~/.mongodb"
     }
 }
